--- a/index.html
+++ b/index.html
@@ -31,6 +31,39 @@
     <script src="src/main.js" defer></script> <!-- defer : script 파일 다운로드 되는 동안 HTML 코드를 읽을 수 있음 -->
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <div>
+            <img src="images/favicon.ico" alt="logo">
+            <h1><a href="#">Yunwoo</a></h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#mywork">My work</a></li>
+                <li><a href="#testimonial">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Main -->
+    <main>
+        <!-- Home -->
+        <section id="#home"></section>
+        <!-- About -->
+        <section id="#about"></section>
+        <!-- Skills -->
+        <section id="#skills"></section>
+        <!-- Work -->
+        <section id="#work"></section>
+        <!-- Testimonials -->
+        <section id="#testimonial"></section>
+        <!-- Arrow up -->
+        <aside></aside>
+    </main>
+    <!-- Footer -->
+    <footer id="contact"></footer>
 </body>
 </html>
