--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
     <!-- Main -->
     <main>
         <!-- Home -->
-        <section id="#home"></section>
+        <section id="home">
+            <img src="images/profile.png" alt="Yunwoo's profile" />
+            <h2>안녕하세요 &#58;&#41; 
+                비전을 갖고 임하는 예비 개발자 정연우입니다.</h2>
+            <p>저는 수많은 도전을 통해</p> 
+            <p>변화에 유연할 정도로 주어진 환경에 적응이 가능하며,</p>
+            <p>끊임없이 분석과 공부로 자신의 가치를 높이는 개발자가 되기를 꿈꾸는 드림코더입니다.</p>
+            <a href="#contact">Contact Me</a>
+        </section>
         <!-- About -->
         <section id="#about"></section>
         <!-- Skills -->
