--- a/index.html
+++ b/index.html
@@ -62,6 +62,53 @@
         </section>
         <!-- About -->
         <section id="#about"></section>
+            <h2>About me</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Quod dolorem aliquid ad nesciunt nulla! 
+                Minima beatae sequi nulla inventore eum deserunt non nesciunt esse sint, 
+                facilis fuga quod explicabo in.
+            </p>
+            <ul>
+                <li>
+                    <i class="fa-brands fa-html5"></i>
+                    <p>Front-end</p>
+                    <p>HTML, CSS, JavaScript, React, Web APIs, FireBase, Styled-Component</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-comments"></i>
+                    <p>Communication Tools</p>
+                    <p>Git, GitHub, Notion, Figma, Slack</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-server"></i>
+                    <p>Back-end</p>
+                    <p>Java, JavaScript, NodeJs, Oracle, MySQL, SpringBoot</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="images/jobs/KH_education.png" alt="KH_education logo">
+                    <div>
+                        <p>KH 정보교육원 Java 기반 풀스텍 양성과정 수료</p>
+                        <p>2022. 12 - 2023. 07</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/jobs/SGI.png" alt="SGI logo">
+                    <div>
+                        <p>서울보증보험 매니저 근무</p>
+                        <p>2020. 10 - 2022. 11</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/jobs/Hwell.png" alt="Hwell logo">
+                    <div>
+                        <p>국민건강보험공단 부팀장 근무</p>
+                        <p>2015. 08 - 2020. 06</p>
+                    </div>
+                </li>
+            </ul>
         <!-- Skills -->
         <section id="#skills"></section>
         <!-- Work -->
