--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
         <!-- About -->
         <section id="#about"></section>
-            <h2>About me</h2>
+            <h2>About me</h2> 
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                 Quod dolorem aliquid ad nesciunt nulla! 
@@ -110,7 +110,80 @@
                 </li>
             </ul>
         <!-- Skills -->
-        <section id="#skills"></section>
+        <section id="#skills">
+            <h2>My Skills</h2>
+            <p>Skills & Attributes</p> <!-- 내가 갖고있는 스킬과 강점, 프로그래밍 소개 -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Eveniet veritatis ut itaque ipsa perspiciatis enim, 
+                nihil quos eius aliquid rem at voluptates autem quis ullam? 
+                Optio, fugit laboriosam! Saepe, quidem!
+            </p>
+            <div>
+                <section>
+                    <h3>Coding Skills</h3>
+                    <ul>
+                        <li> <!-- 1. HTML -->
+                            <div><span>HTML</span><span>95%</span></div>
+                            <div><div style="width: 95%"></div></div>
+                        </li>
+                        <li> <!-- 2. CSS -->
+                            <div><span>CSS</span><span>90%</span></div>
+                            <div><div style="width: 90%"></div></div>
+                        </li>
+                        <li> <!-- 3. JavaScript -->
+                            <div><span>JavaScript</span><span>80%</span></div>
+                            <div><div style="width: 80%"></div></div>
+                        </li>
+                        <li> <!-- 3. React-->
+                            <div><span>React</span><span>80%</span></div>
+                            <div><div style="width: 70%"></div></div>
+                        </li>
+                        <li> <!-- 5. Styled-Componet -->
+                            <div><span>Styled-Component</span><span>80%</span></div>
+                            <div><div style="width: 80%"></div></div>
+                        </li>
+                        <li> <!-- 6. Node.js-->
+                            <div><span>NodeJs</span><span>70%</span></div>
+                            <div><div style="width: 70%"></div></div>
+                        </li>
+                        <li> <!-- 7. Java-->
+                            <div><span>Java</span><span>70%</span></div>
+                            <div><div style="width: 70%"></div></div>
+                        </li>
+                        <li> <!-- 8. Springboot -->
+                            <div><span>Springboot</span><span>70%</span></div>
+                            <div><div style="width: 70%"></div></div>
+                        </li>
+                        <li> <!-- 9. Oracle-->
+                            <div><span>Oracle</span><span>70%</span></div>
+                            <div><div style="width: 70%"></div></div>
+                        </li>
+                        <li> <!-- 10. MySQL -->
+                            <div><span>MySQL</span><span>70%</span></div>
+                            <div><div style="width: 70%"></div></div>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Visual Studio Code</li>
+                        <li>IntelliJ</li>
+                        <li>AWS</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Etc</h3>
+                    <ul>
+                        <li>Git</li>
+                        <li>Notion</li>
+                        <li>Figma</li>
+                        <li>Slack</li>
+                    </ul>
+                </section>
+
+            </div>
+        </section>
         <!-- Work -->
         <section id="#work"></section>
         <!-- Testimonials -->
