--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="#about"></section>
+        <section id="about"></section>
             <h2>About me</h2> 
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -110,7 +110,7 @@
                 </li>
             </ul>
         <!-- Skills -->
-        <section id="#skills">
+        <section id="skills">
             <h2>My Skills</h2>
             <p>Skills & Attributes</p> <!-- 내가 갖고있는 스킬과 강점, 프로그래밍 소개 -->
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
@@ -185,9 +185,59 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="#work"></section>
+        <section id="work">
+            <h2>My work</h2>
+            <p>Projects</p> <!-- 차후에 변경예정 -->
+            <ul>
+                <li>
+                    <a href="#" target="_blank">
+                        <img src="images/projects/project1.webp" alt="project1">
+                        <div>
+                            <h3>Project #1</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">
+                        <img src="images/projects/project2.webp" alt="project2">
+                        <div>
+                            <h3>Project #2</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">
+                        <img src="images/projects/project3.webp" alt="project3">
+                        <div>
+                            <h3>Project #3</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">
+                        <img src="images/projects/project4.webp" alt="project4">
+                        <div>
+                            <h3>Project #4</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">
+                        <img src="images/projects/project5.webp" alt="project5">
+                        <div>
+                            <h3>Project #5</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </section>
         <!-- Testimonials -->
-        <section id="#testimonial"></section>
+        <section id="testimonial"></section>
         <!-- Arrow up -->
         <aside></aside>
     </main>
