HTML - FOOTER & Part little change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 비전을 갖고 임하는 예비 개발자 정연우입니다.</h2>
             <p>저는 수많은 도전을 통해</p> 
             <p>변화에 유연할 정도로 주어진 환경에 적응이 가능하며,</p>
-            <p>끊임없이 분석과 공부로 자신의 가치를 높이는 개발자가 되기를 꿈꾸는 드림코더입니다.</p>
+            <p>끊임없는 분석과 공부로 자신의 가치를 높이는 개발자가 되고 싶습니다.</p> 
             <a href="#contact">Contact Me</a>
         </section>
         <!-- About -->
@@ -187,7 +187,7 @@
         <!-- Work -->
         <section id="work">
             <h2>My work</h2>
-            <p>Projects</p> <!-- 차후에 변경예정 -->
+            <p>PROJECTS</p> <!-- 차후에 변경예정 -->
             <ul>
                 <li>
                     <a href="#" target="_blank">
@@ -236,12 +236,31 @@
                 </li>
             </ul>
         </section>
-        <!-- Testimonials -->
-        <section id="testimonial"></section>
         <!-- Arrow up -->
-        <aside></aside>
+        <aside>
+            <a href="#home" title="back tp top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+        </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact"></footer>
+    <footer id="contact">
+        <h2>Let&#39;s talk</h2>
+        <p>browniris7@naver.com</p>
+        <ul>
+            <li>
+                <a href="https://github.com/yunwoo0301" 
+                target="_blank"
+                title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li> <!-- 노션 주소 추후 변경 예정 -->
+                <a href="https://www.notion.so/13e1d45fb02340e785237c62038846f7">
+                    <i class="fa-brands fa-blogger"></i>
+                </a></li>
+        </ul>
+        <p>© Web Front-end developer portfolio-- by Yunwoo Jung ⭐</p>
+    </footer>
 </body>
 </html>
