--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about"></section>
-            <h2>About me</h2> 
-            <p>
+        <section id="about" class="section">
+            <h2 class="title">About me</h2> 
+            <p class="description">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                 Quod dolorem aliquid ad nesciunt nulla! 
                 Minima beatae sequi nulla inventore eum deserunt non nesciunt esse sint, 
@@ -108,10 +108,11 @@
                     </div>
                 </li>
             </ul>
+        </section> 
         <!-- Skills -->
-        <section id="skills">
-            <h2>My Skills</h2>
-            <p>Skills & Attributes</p> <!-- 내가 갖고있는 스킬과 강점, 프로그래밍 소개 -->
+        <section id="skills"  class="section">
+            <h2 class="title">My Skills</h2>
+            <p class="description">Skills & Attributes</p> <!-- 내가 갖고있는 스킬과 강점, 프로그래밍 소개 -->
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Eveniet veritatis ut itaque ipsa perspiciatis enim, 
                 nihil quos eius aliquid rem at voluptates autem quis ullam? 
@@ -184,9 +185,9 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="work">
-            <h2>My work</h2>
-            <p>PROJECTS</p> <!-- 차후에 변경예정 -->
+        <section id="work"  class="section">
+            <h2 class="title">My work</h2>
+            <p class="description">PROJECTS</p> <!-- 차후에 변경예정 -->
             <ul>
                 <li>
                     <a href="#" target="_blank">
@@ -243,9 +244,9 @@
         </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
-        <h2>Let&#39;s talk</h2>
-        <p>browniris7@naver.com</p>
+    <footer id="contact"  class="section">
+        <h2 class="title">Let&#39;s talk</h2>
+        <p class="description">browniris7@naver.com</p>
         <ul>
             <li>
                 <a href="https://github.com/yunwoo0301" 
