--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about" class="section">
+        <section id="about" class="section max-container">
             <h2 class="title">About me</h2> 
             <p class="description">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -68,43 +68,43 @@
                 Minima beatae sequi nulla inventore eum deserunt non nesciunt esse sint, 
                 facilis fuga quod explicabo in.
             </p>
-            <ul>
-                <li>
-                    <i class="fa-brands fa-html5"></i>
-                    <p>Front-end</p>
+            <ul class="majors">
+                <li class="major">
+                    <i class="fa-brands fa-html5 major__icon"></i>
+                    <p class="major__title">Front-end</p>
                     <p>HTML, CSS, JavaScript, React, Web APIs, FireBase, Styled-Component</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-comments"></i>
-                    <p>Communication Tools</p>
+                <li class="major">
+                    <i class="fa-solid fa-comments major__icon"></i>
+                    <p class="major__title">Communication Tools</p>
                     <p>Git, GitHub, Notion, Figma, Slack</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-server"></i>
-                    <p>Back-end</p>
+                <li class="major">
+                    <i class="fa-solid fa-server major__icon"></i>
+                    <p class="major__title">Back-end</p>
                     <p>Java, JavaScript, NodeJs, Oracle, MySQL, SpringBoot</p>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <img src="images/jobs/KH_education.png" alt="KH_education logo">
+            <ul class="jobs">
+                <li class="job">
+                    <img  class="job__logo" src="images/jobs/KH_education.png" alt="KH_education logo">
                     <div>
-                        <p>KH 정보교육원 Java 기반 풀스텍 양성과정 수료</p>
-                        <p>2022. 12 - 2023. 07</p>
+                        <p class="job__name">KH 정보교육원 Java 기반 풀스텍 양성과정 수료</p>
+                        <p class="job__period">2022. 12 - 2023. 07</p>
                     </div>
                 </li>
-                <li>
-                    <img src="images/jobs/SGI.png" alt="SGI logo">
+                <li class="job">
+                    <img class="job__logo" src="images/jobs/SGI.png" alt="SGI logo">
                     <div>
-                        <p>서울보증보험 매니저 근무</p>
-                        <p>2020. 10 - 2022. 11</p>
+                        <p class="job__name">서울보증보험 매니저 근무</p>
+                        <p class="job__period">2020. 10 - 2022. 11</p>
                     </div>
                 </li>
-                <li>
-                    <img src="images/jobs/Hwell.png" alt="Hwell logo">
+                <li class="job">
+                    <img class="job__logo" src="images/jobs/Hwell.png" alt="Hwell logo">
                     <div>
-                        <p>국민건강보험공단 부팀장 근무</p>
-                        <p>2015. 08 - 2020. 06</p>
+                        <p class="job__name">국민건강보험공단 부팀장 근무</p>
+                        <p class="job__period">2015. 08 - 2020. 06</p>
                     </div>
                 </li>
             </ul>
