CSS - Skills - Bar

--- a/index.html
+++ b/index.html
@@ -123,49 +123,49 @@
                     <section class="skills__coding">
                         <h3 class="skills__title">Coding Skills</h3>
                         <ul>
-                            <li> <!-- 1. HTML -->
-                                <div><span>HTML</span><span>95%</span></div>
-                                <div><div style="width: 95%"></div></div>
+                            <li class="bar"> <!-- 1. HTML -->
+                                <div class="bar__metadata"><span>HTML</span><span>95%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 95%"></div></div>
                             </li>
-                            <li> <!-- 2. CSS -->
-                                <div><span>CSS</span><span>90%</span></div>
-                                <div><div style="width: 90%"></div></div>
+                            <li class="bar"> <!-- 2. CSS -->
+                                <div class="bar__metadata"><span>CSS</span><span>90%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 90%"></div></div>
                             </li>
-                            <li> <!-- 3. JavaScript -->
-                                <div><span>JavaScript</span><span>80%</span></div>
-                                <div><div style="width: 80%"></div></div>
+                            <li class="bar"> <!-- 3. JavaScript -->
+                                <div class="bar__metadata"><span>JavaScript</span><span>80%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 80%"></div></div>
                             </li>
-                            <li> <!-- 3. React-->
-                                <div><span>React</span><span>80%</span></div>
-                                <div><div style="width: 70%"></div></div>
+                            <li class="bar"> <!-- 3. React-->
+                                <div class="bar__metadata"><span>React</span><span>80%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 70%"></div></div>
                             </li>
-                            <li> <!-- 5. Styled-Componet -->
-                                <div><span>Styled-Component</span><span>80%</span></div>
-                                <div><div style="width: 80%"></div></div>
+                            <li class="bar"> <!-- 5. Styled-Componet -->
+                                <div class="bar__metadata"><span>Styled-Component</span><span>80%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 80%"></div></div>
                             </li>
-                            <li> <!-- 6. Node.js-->
-                                <div><span>NodeJs</span><span>70%</span></div>
-                                <div><div style="width: 70%"></div></div>
+                            <li class="bar"> <!-- 6. Node.js-->
+                                <div class="bar__metadata"><span>NodeJs</span><span>75%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 70%"></div></div>
                             </li>
-                            <li> <!-- 7. Java-->
-                                <div><span>Java</span><span>70%</span></div>
-                                <div><div style="width: 70%"></div></div>
+                            <li class="bar"> <!-- 7. Java-->
+                                <div class="bar__metadata"><span>Java</span><span>70%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 70%"></div></div>
                             </li>
-                            <li> <!-- 8. Springboot -->
-                                <div><span>Springboot</span><span>70%</span></div>
-                                <div><div style="width: 70%"></div></div>
+                            <li class="bar"> <!-- 8. Springboot -->
+                                <div class="bar__metadata"><span>Springboot</span><span>70%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 70%"></div></div>
                             </li>
-                            <li> <!-- 9. Oracle-->
-                                <div><span>Oracle</span><span>70%</span></div>
-                                <div><div style="width: 70%"></div></div>
+                            <li class="bar"> <!-- 9. Oracle-->
+                                <div class="bar__metadata"><span>Oracle</span><span>70%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 70%"></div></div>
                             </li>
-                            <li> <!-- 10. MySQL -->
-                                <div><span>MySQL</span><span>70%</span></div>
-                                <div><div style="width: 70%"></div></div>
+                            <li class="bar"> <!-- 10. MySQL -->
+                                <div class="bar__metadata"><span>MySQL</span><span>70%</span></div>
+                                <div class="bar__bg"><div class="bar__value" style="width: 70%"></div></div>
                             </li>
                         </ul>
-                    </section class="skills__tools">
-                    <section>
+                    </section>
+                    <section class="skills__tools">
                         <h3 class="skills__title">Tools</h3>
                         <ul>
                             <li>Visual Studio Code</li>
