CSS - Work - Projects

--- a/index.html
+++ b/index.html
@@ -187,55 +187,57 @@
         </section>
         <!-- Work -->
         <section id="work"  class="section">
-            <h2 class="title">My work</h2>
-            <p class="description">PROJECTS</p> <!-- 차후에 변경예정 -->
-            <ul>
-                <li>
-                    <a href="#" target="_blank">
-                        <img src="images/projects/project1.webp" alt="project1">
-                        <div>
-                            <h3>Project #1</h3>
-                            <p>Clone Coding with HTML, CSS</p>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">
-                        <img src="images/projects/project2.webp" alt="project2">
-                        <div>
-                            <h3>Project #2</h3>
-                            <p>Clone Coding with HTML, CSS</p>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">
-                        <img src="images/projects/project3.webp" alt="project3">
-                        <div>
-                            <h3>Project #3</h3>
-                            <p>Clone Coding with HTML, CSS</p>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">
-                        <img src="images/projects/project4.webp" alt="project4">
-                        <div>
-                            <h3>Project #4</h3>
-                            <p>Clone Coding with HTML, CSS</p>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">
-                        <img src="images/projects/project5.webp" alt="project5">
-                        <div>
-                            <h3>Project #5</h3>
-                            <p>Clone Coding with HTML, CSS</p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+            <div class="max-container"> <!-- work 구간 배경 지정 -->
+                <h2 class="title">My work</h2>
+                <p class="description">PROJECTS</p> <!-- 차후에 변경예정 -->
+                <ul class="projects">
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project1.webp" alt="project1" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #1</h3>
+                                <p>Clone Coding with HTML, CSS</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project2.webp" alt="project2" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #2</h3>
+                                <p>Clone Coding with HTML, CSS</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project3.webp" alt="project3" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #3</h3>
+                                <p>Clone Coding with HTML, CSS</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project4.webp" alt="project4" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #4</h3>
+                                <p>Clone Coding with HTML, CSS</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project5.webp" alt="project5" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #5</h3>
+                                <p>Clone Coding with HTML, CSS</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Arrow up -->
         <aside>
