--- a/index.html
+++ b/index.html
@@ -241,29 +241,38 @@
         </section>
         <!-- Arrow up -->
         <aside>
-            <a href="#home" title="back tp top">
+            <a class="arrow-up" href="#home" title="back tp top">
                 <i class="fa-solid fa-arrow-up"></i>
             </a>
         </aside>
     </main>
     <!-- Footer -->
     <footer id="contact"  class="section">
-        <h2 class="title">Let&#39;s talk</h2>
-        <p class="description">browniris7@naver.com</p>
-        <ul>
-            <li>
-                <a href="https://github.com/yunwoo0301" 
-                target="_blank"
-                title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
-                    <i class="fa-brands fa-github"></i>
-                </a>
-            </li>
-            <li> <!-- 노션 주소 추후 변경 예정 -->
-                <a href="https://www.notion.so/13e1d45fb02340e785237c62038846f7">
-                    <i class="fa-brands fa-blogger"></i>
-                </a></li>
-        </ul>
-        <p>© Web Front-end developer portfolio-- by Yunwoo Jung ⭐</p>
+        <div class="max-container">
+            <h2 class="title">Let&#39;s talk</h2>
+            <p class="description">browniris7@naver.com</p>
+            <ul class="contact__links">
+                <li>
+                    <a
+                    class="contact__link" 
+                    href="https://github.com/yunwoo0301" 
+                    target="_blank"
+                    title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li> <!-- 노션 주소 추후 변경 예정 -->
+                    <a 
+                    class="contact__link"
+                    href="https://www.notion.so/13e1d45fb02340e785237c62038846f7"
+                    target="_blank"
+                    title="my blog link">
+                        <i class="fa-brands fa-blogger"></i>
+                    </a>
+                </li>
+            </ul>
+            <p>© Web Front-end developer portfolio-- by Yunwoo Jung ⭐</p>
+        </div>
     </footer>
 </body>
 </html>
