--- a/index.html
+++ b/index.html
@@ -51,63 +51,65 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img class="home__avatar" src="images/profile.png" alt="Yunwoo's profile" />
-            <h2 class="home__title">안녕하세요 &#58;&#41; <br /> 
-                <strong class="home__title__strong">비전을 갖고 임하는 예비 개발자 정연우입니다.</strong></h2>
-            <p class="home__description">저는 수많은 도전을 통해</p> 
-            <p class="home__description">변화에 유연할 정도로 주어진 환경에 적응이 가능하며,</p>
-            <p class="home__description">끊임없는 분석과 공부로 자신의 가치를 높이는 개발자가 되고 싶습니다.</p> 
-            <a class="home__contact" href="#contact">Contact Me</a>
-        </section>
-        <!-- About -->
-        <section id="about" class="section max-container">
-            <h2 class="title">About me</h2> 
-            <p class="description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Quod dolorem aliquid ad nesciunt nulla! 
-                Minima beatae sequi nulla inventore eum deserunt non nesciunt esse sint, 
-                facilis fuga quod explicabo in.
-            </p>
-            <ul class="majors">
-                <li class="major">
-                    <i class="fa-brands fa-html5 major__icon"></i>
-                    <p class="major__title">Front-end</p>
-                    <p>HTML, CSS, JavaScript, React, Web APIs, FireBase, Styled-Component</p>
-                </li>
-                <li class="major__tools"> <!-- 협업툴 크기 조절 위해 따로 클래스명 지정 -->
-                    <i class="fa-solid fa-comments major__icon"></i>
-                    <p class="major__title">Communication-Tools</p>
-                    <p>Git, GitHub, Notion, Figma, Slack</p>
-                </li>
-                <li class="major">
-                    <i class="fa-solid fa-server major__icon"></i>
-                    <p class="major__title">Back-end</p>
-                    <p>Java, JavaScript, NodeJs, Oracle, MySQL, SpringBoot</p>
-                </li>
-            </ul>
-            <ul class="jobs">
-                <li class="job">
-                    <img  class="job__logo" src="images/jobs/KH_education.png" alt="KH_education logo">
-                    <div>
-                        <p class="job__name">KH 정보교육원 Java 기반 풀스텍 양성과정 수료</p>
-                        <p class="job__period">2022. 12 - 2023. 07</p>
-                    </div>
-                </li>
-                <li class="job">
-                    <img class="job__logo" src="images/jobs/SGI.png" alt="SGI logo">
-                    <div>
-                        <p class="job__name">서울보증보험 매니저 근무</p>
-                        <p class="job__period">2020. 10 - 2022. 11</p>
-                    </div>
-                </li>
-                <li class="job">
-                    <img class="job__logo" src="images/jobs/Hwell.png" alt="Hwell logo">
-                    <div>
-                        <p class="job__name">국민건강보험공단 부팀장 근무</p>
-                        <p class="job__period">2015. 08 - 2020. 06</p>
-                    </div>
-                </li>
-            </ul>
+            <div class="home__container"> <!-- home 구간 불투명 설정 위해 -->
+                <img class="home__avatar" src="images/profile.png" alt="Yunwoo's profile" />
+                <h2 class="home__title">안녕하세요 &#58;&#41; <br /> 
+                    <strong class="home__title__strong">비전을 갖고 임하는 예비 개발자 정연우입니다.</strong></h2>
+                <p class="home__description">저는 수많은 도전을 통해</p> 
+                <p class="home__description">변화에 유연할 정도로 주어진 환경에 적응이 가능하며,</p>
+                <p class="home__description">끊임없는 분석과 공부로 자신의 가치를 높이는 개발자가 되고 싶습니다.</p> 
+                <a class="home__contact" href="#contact">Contact Me</a>
+            </section>
+            <!-- About -->
+            <section id="about" class="section max-container">
+                <h2 class="title">About me</h2> 
+                <p class="description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Quod dolorem aliquid ad nesciunt nulla! 
+                    Minima beatae sequi nulla inventore eum deserunt non nesciunt esse sint, 
+                    facilis fuga quod explicabo in.
+                </p>
+                <ul class="majors">
+                    <li class="major">
+                        <i class="fa-brands fa-html5 major__icon"></i>
+                        <p class="major__title">Front-end</p>
+                        <p>HTML, CSS, JavaScript, React, Web APIs, FireBase, Styled-Component</p>
+                    </li>
+                    <li class="major__tools"> <!-- 협업툴 크기 조절 위해 따로 클래스명 지정 -->
+                        <i class="fa-solid fa-comments major__icon"></i>
+                        <p class="major__title">Communication-Tools</p>
+                        <p>Git, GitHub, Notion, Figma, Slack</p>
+                    </li>
+                    <li class="major">
+                        <i class="fa-solid fa-server major__icon"></i>
+                        <p class="major__title">Back-end</p>
+                        <p>Java, JavaScript, NodeJs, Oracle, MySQL, SpringBoot</p>
+                    </li>
+                </ul>
+                <ul class="jobs">
+                    <li class="job">
+                        <img  class="job__logo" src="images/jobs/KH_education.png" alt="KH_education logo">
+                        <div>
+                            <p class="job__name">KH 정보교육원 Java 기반 풀스텍 양성과정 수료</p>
+                            <p class="job__period">2022. 12 - 2023. 07</p>
+                        </div>
+                    </li>
+                    <li class="job">
+                        <img class="job__logo" src="images/jobs/SGI.png" alt="SGI logo">
+                        <div>
+                            <p class="job__name">서울보증보험 매니저 근무</p>
+                            <p class="job__period">2020. 10 - 2022. 11</p>
+                        </div>
+                    </li>
+                    <li class="job">
+                        <img class="job__logo" src="images/jobs/Hwell.png" alt="Hwell logo">
+                        <div>
+                            <p class="job__name">국민건강보험공단 부팀장 근무</p>
+                            <p class="job__period">2015. 08 - 2020. 06</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section> 
         <!-- Skills -->
         <section id="skills"  class="section">
