--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Javascript -->
-    <script src="src/main.js" defer></script> <!-- defer : script 파일 다운로드 되는 동안 HTML 코드를 읽을 수 있음 -->
+    <script type="module" src="src/main.js" defer></script> <!-- defer : script 파일 다운로드 되는 동안 HTML 코드를 읽을 수 있음 -->
+    <script type="module" src="src/projects.js" defer></script>
 </head>
 <body>
     <!-- Header -->
