--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Javascript -->
     <script type="module" src="src/main.js" defer></script> <!-- defer : script 파일 다운로드 되는 동안 HTML 코드를 읽을 수 있음 -->
     <script type="module" src="src/projects.js" defer></script>
+    <script type="module" src="src/active_menu.js" defer></script>
 </head>
 <body>
     <!-- Header -->
