--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a class="header__menu__item active" href="#home">Home</a></li>
                 <li><a class="header__menu__item" href="#about">About</a></li>
                 <li><a class="header__menu__item" href="#skills">Skills</a></li>
-                <li><a class="header__menu__item" href="#mywork">My work</a></li>
+                <li><a class="header__menu__item" href="#work">My work</a></li>
                 <li><a class="header__menu__item" href="#contact">Contact</a></li>
             </ul>
         </nav>
