--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <p class="home__description">변화에 유연할 정도로 주어진 환경에 적응이 가능하며,</p>
                 <p class="home__description">끊임없는 분석과 공부로 자신의 가치를 높이는 개발자가 되고 싶습니다.</p> 
                 <a class="home__contact" href="#contact">Contact Me</a>
-            </section>
+            </div>
+        </section>
             <!-- About -->
             <section id="about" class="section max-container">
                 <h2 class="title">About me</h2> 
@@ -190,6 +191,8 @@
                         </ul>
                     </section>
                 </div>
+
+                <!--  Skills 바탕화면 효과 -->
             </div>
         </section>
         <!-- Work -->
