--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
     rel="stylesheet" />
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/4e7f64a568.js" crossorigin="anonymous"></script>
+    <!-- Typeit -->
+    <script src="https://unpkg.com/typeit@8.3.3/dist/index.umd.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Javascript -->
     <script type="module" src="src/main.js" defer></script> <!-- defer : script 파일 다운로드 되는 동안 HTML 코드를 읽을 수 있음 -->
     <script type="module" src="src/projects.js" defer></script>
     <script type="module" src="src/active_menu.js" defer></script>
+    <script type="module" src="src/type.js" defer></script>
 </head>
 <body>
     <!-- Header -->
@@ -58,9 +61,9 @@
         <section id="home">
             <div class="home__container"> <!-- home 구간 불투명 설정 위해 -->
                 <img class="home__avatar" src="images/profile.png" alt="Yunwoo's profile" />
-                <h2 class="home__title">안녕하세요 &#58;&#41; <br /> 
-                    <strong class="home__title__strong">비전을 갖고 임하는 예비 개발자 정연우입니다.</strong></h2>
-                <p class="home__description">저는 수많은 도전을 통해</p> 
+                <h2 class="home__title">안녕하세요 &#58;&#41;<br/> 
+                    <strong class="home__title__strong">비전을 갖고 임하는 예비 개발자 정연우입니다.</strong></h2>                
+                    <p class="home__description">저는 수많은 도전을 통해</p> 
                 <p class="home__description">변화에 유연할 정도로 주어진 환경에 적응이 가능하며,</p>
                 <p class="home__description">끊임없는 분석과 공부로 자신의 가치를 높이는 개발자가 되고 싶습니다.</p> 
                 <a class="home__contact" href="#contact">Contact Me</a>
