--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
                             </div>
                         </a>
                     </li>
+                    <li class="project">
+                        <a href="#" target="_blank">
+                            <img src="images/projects/project6.webp" alt="project5" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #6</h3>
+                                <p>Clone Coding with HTML, CSS</p>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
