CSS - Profile image change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- Home -->
         <section id="home">
             <div class="home__container"> <!-- home 구간 불투명 설정 위해 -->
-                <img class="home__avatar" src="images/profile.png" alt="Yunwoo's profile" />
+                <img class="home__avatar" src="images/profile_1.png" alt="Yunwoo's profile" />
                 <h2 class="home__title">안녕하세요 &#58;&#41;<br/> 
                     <strong class="home__title__strong">비전을 갖고 임하는 예비 개발자 정연우입니다.</strong></h2>                
                     <p class="home__description">저는 수많은 도전을 통해</p> 
