HTML - About me change

--- a/index.html
+++ b/index.html
@@ -72,12 +72,10 @@
             <!-- About -->
             <section id="about" class="section max-container">
                 <h2 class="title">About me</h2> 
-                <p class="description">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Quod dolorem aliquid ad nesciunt nulla! 
-                    Minima beatae sequi nulla inventore eum deserunt non nesciunt esse sint, 
-                    facilis fuga quod explicabo in.
-                </p>
+                <p class="description">🧐 다양한 서비스 경험을 통해 사용자(고객) 입장에서 생각하고 니즈를 신속하게 파악합니다.</p>
+                <p class="description">🤝 팀의 결과물이 곧 개인의 결과물이라고 생각합니다.</p>
+                <p class="description">✍️ 지식을 습득하기 위해 내용 정리와 메모를 놓지 않습니다.</p>
+                <p class="description">👩‍💻 더 나아가 시각적인 면과 정보를 원활하게 처리하는 소프트웨어 개발자가 꿈입니다.</p>
                 <ul class="majors">
                     <li class="major">
                         <i class="fa-brands fa-html5 major__icon"></i>
