--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
         <div class="max-container">  <!-- 배경은 채우고 컨텐츠 내용 조정 시 전체 div로 묶기 -->
           <h2 class="title">My Skills</h2>
           <p class="description">Skills & Attributes</p> <!-- 내가 갖고있는 스킬과 강점, 프로그래밍 소개 -->
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet
-            veritatis ut itaque ipsa perspiciatis enim, nihil quos eius aliquid
-            rem at voluptates autem quis ullam? Optio, fugit laboriosam! Saepe,
-            quidem!
-          </p>
+          <p class="description">✔️ CSS 글로벌 변수를 선언한 스타일 코드 재사용성</p>
+          <p class="description">✔️ 리액트 hook과 props를 이용한 상태관리</p>
+          <p class="description">✔️ 스타일드 컴포넌트를 활용한 코드 재사용성 & 디자인 통일성</p>
+          <p class="description">✔️ 미디어쿼리를 이용한 반응형 레이아웃 구현</p>
+          <p class="description">✔️ Restful API를 통한 자유게시판 CRUD 및 검색 엔진</p>
+            <p class="description">✔️ Github, AWS를 활용한 프로젝트 사이트 배포</p>
           <div class="skills">
             <section class="skills__coding">
               <h3 class="skills__title">Coding Skills</h3>
@@ -322,7 +322,7 @@
         <p class="description">browniris7@naver.com</p>
         <ul class="contact__links">
           <li>
-            <a href="https://github.com/yunwoo0301" target="_blank" title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
+            <a class="contact__link" href="https://github.com/yunwoo0301" target="_blank" title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
               <i class="fa-brands fa-github"></i>
             </a>
           </li>
