--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
     <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/4e7f64a568.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
+
     <!-- Typeit -->
     <script src="https://unpkg.com/typeit@8.3.3/dist/index.umd.js"></script>
+
+    <!-- TypeIt Scroll Out -->
+    <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Javascript -->
@@ -77,13 +82,13 @@
       </section>
       
       <!-- About -->
-      <section id="about" class="section max-container">
+      <section id="about" class="section max-container"  >
         <h2 class="title">About me</h2>
         <p class="description">🧐 다양한 서비스 경험을 통해 사용자(고객) 입장에서 생각하고 니즈를 신속하게 파악합니다.</p>
         <p class="description">🤝 팀의 결과물이 곧 개인의 결과물이라고 생각합니다.</p>
         <p class="description">✍️ 지식을 습득하기 위해 내용 정리와 메모를 놓지 않습니다.</p>
         <p class="description">👩‍💻 더 나아가 시각적인 면과 정보를 원활하게 처리하는 소프트웨어 개발자가 꿈입니다.</p>
-        <ul class="majors">
+        <ul class="majors" data-scroll>
           <li class="major">
             <i class="fa-brands fa-html5 major__icon"></i>
             <p class="major__title">Front-end</p>
@@ -136,7 +141,7 @@
           <p class="description">✔️ 미디어쿼리를 이용한 반응형 레이아웃 구현</p>
           <p class="description">✔️ Restful API를 통한 자유게시판 CRUD 및 검색 엔진</p>
             <p class="description">✔️ Github, AWS를 활용한 프로젝트 사이트 배포</p>
-          <div class="skills">
+          <div class="skills" data-scroll>
             <section class="skills__coding">
               <h3 class="skills__title">Coding Skills</h3>
               <ul>
@@ -248,7 +253,7 @@
         <div class="max-container"> <!-- work 구간 배경 지정 -->
           <h2 class="title">My work</h2>
           <p class="description">PROJECTS</p> <!-- 차후에 변경예정 -->
-          <ul class="projects">
+          <ul class="projects" data-scroll>
             <li class="project">
               <a href="#" target="_blank">
                 <img src="images/projects/project1.webp" alt="project1" class="project__img"/>
@@ -320,7 +325,7 @@
       <div class="max-container">
         <h2 class="title">Let&#39;s talk</h2>
         <p class="description">browniris7@naver.com</p>
-        <ul class="contact__links">
+        <ul class="contact__links" data-scroll>
           <li>
             <a class="contact__link" href="https://github.com/yunwoo0301" target="_blank" title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
               <i class="fa-brands fa-github"></i>
