Projects image change

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <ul class="projects" data-scroll>
             <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project1.webp" alt="project1" class="project__img"/>
+                <img src="images/projects/project1.png" alt="project1" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #1</h3>
                   <p>Clone Coding with HTML, CSS</p>
@@ -265,7 +265,7 @@
             </li>
             <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project2.webp" alt="project2" class="project__img"/>
+                <img src="images/projects/project2.png" alt="project2" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #2</h3>
                   <p>Clone Coding with HTML, CSS</p>
@@ -277,33 +277,6 @@
                 <img src="images/projects/project3.webp" alt="project3" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #3</h3>
-                  <p>Clone Coding with HTML, CSS</p>
-                </div>
-              </a>
-            </li>
-            <li class="project">
-              <a href="#" target="_blank">
-                <img src="images/projects/project4.webp" alt="project4" class="project__img"/>
-                <div class="project__metadata">
-                  <h3 class="project__title">Project #4</h3>
-                  <p>Clone Coding with HTML, CSS</p>
-                </div>
-              </a>
-            </li>
-            <li class="project">
-              <a href="#" target="_blank">
-                <img src="images/projects/project5.webp" alt="project5" class="project__img"/>
-                <div class="project__metadata">
-                  <h3 class="project__title">Project #5</h3>
-                  <p>Clone Coding with HTML, CSS</p>
-                </div>
-              </a>
-            </li>
-            <li class="project">
-              <a href="#" target="_blank">
-                <img src="images/projects/project6.webp" alt="project5" class="project__img"/>
-                <div class="project__metadata">
-                  <h3 class="project__title">Project #6</h3>
                   <p>Clone Coding with HTML, CSS</p>
                 </div>
               </a>
