HTML blog link & CSS little change

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <img src="images/projects/project1.png" alt="project1" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #1</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <p>Tech with HTML, CSS, JavaScript</p>
                 </div>
               </a>
             </li>
@@ -268,7 +268,7 @@
                 <img src="images/projects/project2.png" alt="project2" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #2</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <p>Tech with HTML, CSS, JavaScript, React, SpringBoot</p>
                 </div>
               </a>
             </li>
@@ -277,7 +277,7 @@
                 <img src="images/projects/project3.webp" alt="project3" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #3</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <p>Tech with HTML, CSS, JavaScript</p>
                 </div>
               </a>
             </li>
@@ -305,7 +305,7 @@
             </a>
           </li>
           <li>
-            <a class="contact__link" href="https://www.notion.so/13e1d45fb02340e785237c62038846f7" target="_blank" title="my blog link">  <!-- 노션 주소 추후 변경 예정 -->
+            <a class="contact__link" href="https://www.notion.so/c1c9011c90e3458da138b68a5cece1c9" target="_blank" title="my blog link">
               <i class="fa-brands fa-blogger"></i>
             </a>
           </li>
