--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
           <h2 class="home__title">안녕하세요 &#58;&#41;<br />
             <strong class="home__title__strong">비전을 갖고 임하는 예비 개발자 정연우입니다.</strong>
           </h2>
-          <p class="home__description">저는 수많은 도전을 통해</p>
-          <p class="home__description">변화에 유연할 정도로 주어진 환경에 적응이 가능하며,</p>
-          <p class="home__description">끊임없는 분석과 공부로 자신의 가치를 높이는 개발자가 되고 싶습니다.</p>
+          <p class="home__description">저는 다양한 도전을 통해</p>
+          <p class="home__description">변화에 유연하게 대응하며 주어진 환경에 빠르게 적응합니다.</p>
+          <p class="home__description">끊임없이 분석하고 연구해서</p>
+          <p class="home__description">스스로 경쟁력을 높이는 개발자가 되고 싶습니다.</p>
           <a class="home__contact" href="#contact">Contact Me</a>
         </div>
       </section>
@@ -85,9 +86,9 @@
       <section id="about" class="section max-container"  >
         <h2 class="title">About me</h2>
         <p class="description">🧐 다양한 서비스 경험을 통해 사용자(고객) 입장에서 생각하고 니즈를 신속하게 파악합니다.</p>
-        <p class="description">🤝 팀의 결과물이 곧 개인의 결과물이라고 생각합니다.</p>
-        <p class="description">✍️ 지식을 습득하기 위해 내용 정리와 메모를 놓지 않습니다.</p>
-        <p class="description">👩‍💻 더 나아가 시각적인 면과 정보를 원활하게 처리하는 소프트웨어 개발자가 꿈입니다.</p>
+        <p class="description">🤝 개인의 성장은 곧 좋은 팀워크를 만들어 내고 높은 성과를 이룰 수 있다고 생각합니다.</p>
+        <p class="description">✍️ 전문성을 쌓기 위해 평소 지식 메모와 문서화 작업을 중요시 합니다.</p>
+        <p class="description">👩‍💻 시각적 측면과 정보를 원활하게 처리하는 소프트웨어 개발자가 되는 것이 꿈입니다.</p>
         <ul class="majors" data-scroll>
           <li class="major">
             <i class="fa-brands fa-html5 major__icon"></i>
@@ -257,6 +258,8 @@
             <li class="project">
               <a href="#" target="_blank">
                 <img src="images/projects/project1.png" alt="project1" class="project__img"/>
+                <a class="contact__link" href="https://github.com/yunwoo0301" target="_blank" title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
+                
                 <div class="project__metadata">
                   <h3 class="project__title">Project #1</h3>
                   <p>Tech with HTML, CSS, JavaScript</p>
@@ -264,7 +267,7 @@
               </a>
             </li>
             <li class="project">
-              <a href="#" target="_blank">
+              <a href="https://github.com/yunwoo0301/RealFinalProject-DDD" target="project_DDD_link">
                 <img src="images/projects/project2.png" alt="project2" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #2</h3>
@@ -274,10 +277,10 @@
             </li>
             <li class="project">
               <a href="#" target="_blank">
-                <img src="images/projects/project3.webp" alt="project3" class="project__img"/>
+                <img src="images/projects/project3.png" alt="project3" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #3</h3>
-                  <p>Tech with HTML, CSS, JavaScript</p>
+                  <p>Tech with HTML, CSS, JavaScript, React, Redux, Axios</p>
                 </div>
               </a>
             </li>
@@ -305,7 +308,7 @@
             </a>
           </li>
           <li>
-            <a class="contact__link" href="https://www.notion.so/c1c9011c90e3458da138b68a5cece1c9" target="_blank" title="my blog link">
+            <a class="contact__link" href="https://gelatinous-decade-fdf.notion.site/1de35b214e4a47e3b154e16afb153ee6?pvs=4" target="_blank" title="my blog link">
               <i class="fa-brands fa-blogger"></i>
             </a>
           </li>
