프로젝트 링크 수정

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- OG (Open Graph Data) -->
     <meta property="og:title" content="여누의 포트폴리오" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="배포후 생성된 URL" />
-    <meta property="og:image" content="배포후에 생성된 이미지 URL" />
+    <meta property="og:url" content="https://yunwoo0301.github.io/portfolio/" />
+    <meta property="og:image" content="https://yunwoo0301.github.io/portfolio/images/og.webp" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -256,9 +256,8 @@
           <p class="description">PROJECTS</p> <!-- 차후에 변경예정 -->
           <ul class="projects" data-scroll>
             <li class="project">
-              <a href="#" target="_blank">
+              <a href="https://yunwoo0301.github.io/portfolio/" target="project_portfolio_link">
                 <img src="images/projects/project1.png" alt="project1" class="project__img"/>
-                <a class="contact__link" href="https://github.com/yunwoo0301" target="_blank" title="my github link"> <!-- a태그 웹 접근성 위해 title 지정 -->
                 
                 <div class="project__metadata">
                   <h3 class="project__title">Project #1</h3>
@@ -276,7 +275,7 @@
               </a>
             </li>
             <li class="project">
-              <a href="#" target="_blank">
+              <a href="https://yunoo-netflix.netlify.app/" target="project_netflix_link">
                 <img src="images/projects/project3.png" alt="project3" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #3</h3>
