프로젝트 포폴 주소 수정 및 원격 저장소 재연결 테스트

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <p class="description">PROJECTS</p> <!-- 차후에 변경예정 -->
           <ul class="projects" data-scroll>
             <li class="project">
-              <a href="https://yunwoo0301.github.io/portfolio/" target="project_portfolio_link">
+              <a href="https://yunwoo0301.github.io/portfolio/" target="project1_portfolio_link">
                 <img src="images/projects/project1.png" alt="project1" class="project__img"/>
                 
                 <div class="project__metadata">
@@ -266,7 +266,7 @@
               </a>
             </li>
             <li class="project">
-              <a href="https://github.com/yunwoo0301/RealFinalProject-DDD" target="project_DDD_link">
+              <a href="https://github.com/yunwoo0301/RealFinalProject-DDD" target="project2_DDD_link">
                 <img src="images/projects/project2.png" alt="project2" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #2</h3>
@@ -275,7 +275,7 @@
               </a>
             </li>
             <li class="project">
-              <a href="https://yunoo-netflix.netlify.app/" target="project_netflix_link">
+              <a href="https://yunoo-netflix.netlify.app/" target="project3_netflix_link">
                 <img src="images/projects/project3.png" alt="project3" class="project__img"/>
                 <div class="project__metadata">
                   <h3 class="project__title">Project #3</h3>
