About me & My Skills change

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       <section id="about" class="section max-container"  >
         <h2 class="title">About me</h2>
         <p class="description">🧐 다양한 서비스 경험을 통해 사용자(고객) 입장에서 생각하고 니즈를 신속하게 파악합니다.</p>
-        <p class="description">🤝 개인의 성장은 곧 좋은 팀워크를 만들어 내고 높은 성과를 이룰 수 있다고 생각합니다.</p>
+        <p class="description">🤝 개인보다 공동의 목표를 향한 성장은 곧 좋은 팀워크를 만들어 내고 높은 성과를 이룰 수 있다고 생각합니다.</p>
         <p class="description">✍️ 전문성을 쌓기 위해 평소 지식 메모와 문서화 작업을 중요시 합니다.</p>
-        <p class="description">👩‍💻 시각적 측면과 정보를 원활하게 처리하는 소프트웨어 개발자가 되는 것이 꿈입니다.</p>
+        <p class="description">👩‍💻 사용자 관점에서 편리한 UI/UX를 고려하고 좋은 서비스 코드의 표본이 되는 개발자가 꿈입니다.</p>
         <ul class="majors" data-scroll>
           <li class="major">
             <i class="fa-brands fa-html5 major__icon"></i>
@@ -140,8 +140,8 @@
           <p class="description">✔️ 리액트 hook과 props를 이용한 상태관리</p>
           <p class="description">✔️ 스타일드 컴포넌트를 활용한 코드 재사용성 & 디자인 통일성</p>
           <p class="description">✔️ 미디어쿼리를 이용한 반응형 레이아웃 구현</p>
-          <p class="description">✔️ Restful API를 통한 자유게시판 CRUD 및 검색 엔진</p>
-            <p class="description">✔️ Github, AWS를 활용한 프로젝트 사이트 배포</p>
+          <p class="description">✔️ Restful API를 통한 자유게시판 CRUD 로직 구현</p>
+            <p class="description">✔️ FireBase를 활용한 이미지 업로드 구현</p>
           <div class="skills" data-scroll>
             <section class="skills__coding">
               <h3 class="skills__title">Coding Skills</h3>
@@ -312,7 +312,7 @@
             </a>
           </li>
         </ul>
-        <p>© Web Front-end developer portfolio-- by Yunwoo Jung ⭐</p>
+        <p>© Web Front-end developer portfolio-- by YunWoo Jung ⭐</p>
       </div>
     </footer>
   </body>
