--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
           <li class="job">
             <img class="job__logo" src="images/jobs/KH_education.png" alt="KH_education logo"/>
             <div>
-              <p class="job__name">KH 정보교육원 Java 기반 풀스텍 양성과정 수료</p>
-              <p class="job__period">2022. 12 - 2023. 07</p>
+              <p class="job__name">KH 정보교육원 풀스텍 양성과정 수료</p>
+              <p class="job__period">2022.12 - 2023.07</p>
             </div>
           </li>
           <li class="job">
             <img class="job__logo" src="images/jobs/SGI.png" alt="SGI logo" />
             <div>
               <p class="job__name">서울보증보험 매니저 근무</p>
-              <p class="job__period">2020. 10 - 2022. 11</p>
+              <p class="job__period">2020.10 - 2022.11</p>
             </div>
           </li>
           <li class="job">
             <img class="job__logo" src="images/jobs/Hwell.png" alt="Hwell logo"/>
             <div>
               <p class="job__name">국민건강보험공단 부팀장 근무</p>
-              <p class="job__period">2015. 08 - 2020. 06</p>
+              <p class="job__period">2015.08 - 2020.06</p>
             </div>
           </li>
         </ul>
@@ -180,7 +180,7 @@
                 </li>
                 <li class="bar"> <!-- 5. Styled-Componet -->
                   <div class="bar__metadata">
-                    <span>Styled-Component</span><span>80%</span>
+                    <span>Styled-components</span><span>80%</span>
                   </div>
                   <div class="bar__bg">
                     <div class="bar__value" style="width: 80%"></div>
@@ -196,7 +196,7 @@
                 </li>
                 <li class="bar"> <!-- 7. Java-->
                   <div class="bar__metadata">
-                    <span>Java</span><span>70%</span>
+                    <span>JAVA</span><span>70%</span>
                   </div>
                   <div class="bar__bg">
                     <div class="bar__value" style="width: 70%"></div>
@@ -204,7 +204,7 @@
                 </li>
                 <li class="bar"> <!-- 8. Springboot -->
                   <div class="bar__metadata">
-                    <span>Springboot</span><span>70%</span>
+                    <span>Spring Boot</span><span>70%</span>
                   </div>
                   <div class="bar__bg">
                     <div class="bar__value" style="width: 70%"></div>
@@ -233,12 +233,12 @@
               <ul>
                 <li>Visual Studio Code</li>
                 <li>IntelliJ</li>
-                <li>AWS</li>
               </ul>
             </section>
             <section class="skills__etc">
               <h3 class="skills__title">Etc</h3>
               <ul>
+                <li>FireBase</li>
                 <li>Git</li>
                 <li>Notion</li>
                 <li>Figma</li>
@@ -253,7 +253,7 @@
       <section id="work" class="section">
         <div class="max-container"> <!-- work 구간 배경 지정 -->
           <h2 class="title">My work</h2>
-          <p class="description">PROJECTS</p> <!-- 차후에 변경예정 -->
+          <p class="description">PROJECTS</p> 
           <ul class="projects" data-scroll>
             <li class="project">
               <a href="https://yunwoo0301.github.io/portfolio/" target="project1_portfolio_link">
@@ -307,7 +307,7 @@
             </a>
           </li>
           <li>
-            <a class="contact__link" href="https://gelatinous-decade-fdf.notion.site/1de35b214e4a47e3b154e16afb153ee6?pvs=4" target="_blank" title="my blog link">
+            <a class="contact__link" href="https://gelatinous-decade-fdf.notion.site/2a8968c193c14844b24135eba7f6d83e?pvs=4" target="_blank" title="my blog link">
               <i class="fa-brands fa-blogger"></i>
             </a>
           </li>
